# AdventOfCode2022

./: AdventOfCode2022.sln  README.md  pyproject.toml
.github/workflows/: dotnet.yml
Main/: CalorieLog.cs  Elf.cs  FileReader.cs  ICalorieLog.cs  IElf.cs  IFileReader.cs  IMatch.cs  IStrategyGuide.cs  Match.cs  MatchResults.cs  RockPaperScissorsOptions.cs  StrategyGuide.cs
Main/Properties/: AssemblyInfo.cs
MainTests/: MainTests.csproj  UnitTest1.cs
MainTests/Integration Tests/: CalorieLogTests.cs
MainTests/Unit Tests/: CalorieLogTests.cs  ElfTests.cs  MatchTests.cs  StrategyGuideTests.cs
