[tool.poetry]
name = "adventofcode2022"
version = "0.1.0"
description = ""
authors = ["Anthony Panettiere"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
